--- a/MoneyTransfer/.gitignore
+++ b/MoneyTransfer/.gitignore
@@ -1,8 +1,20 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+### Default ignored files ###
+/.idea/
+/shelf/
+/workspace.xml
+
+### Editor-based HTTP Client requests ###
+/httpRequests/
+
+### Datasource local storage ignored files ###
+/dataSources/
+/dataSources.local.xml
+
+### IntelliJ IDEA ###
+.idea/
+*.iws
+*.iml
+*.ipr
 
 ### STS ###
 .apt_generated
@@ -13,19 +25,13 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
+/build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
